# Emergency-Response-Tool

./: .gitignore  CMakeLists.txt  README.md  build.bat  run_tests.bat  应急响应工具设计方案.md
cmake/: post_install.nsi.in
dictionaries/: webshell_rules.json
docs/: DATABASE.md
include/: DatabaseManager.h  DatabaseSchemaValidator.h  FileAnalyzer.h  ForensicsManager.h  LocalizationManager.h  LogAnalyzer.h  MainWindow.h  NetworkDetector.h  PerformanceOptimizer.h  ProcessDetector.h  ReportGenerator.h  SecurityUtils.h  StartupDetector.h  SystemInfoCollector.h  SystemInfoTab.h  ThemeManager.h  ThirdPartyToolsManager.h  ThreatDictionary.h  WebShellDetector.h
sql/: schema.sql
src/: DatabaseManager.cpp  DatabaseSchemaValidator.cpp  FileAnalyzer.cpp  ForensicsManager.cpp  LocalizationManager.cpp  LogAnalyzer.cpp  MainWindow.cpp  NetworkDetector.cpp  PerformanceOptimizer.cpp  ProcessDetector.cpp  ReportGenerator.cpp  SecurityUtils.cpp  StartupDetector.cpp  SystemInfoCollector.cpp  SystemInfoTab.cpp  ThemeManager.cpp  ThirdPartyToolsManager.cpp  ThreatDictionary.cpp  WebShellDetector.cpp  main.cpp
test/: CMakeLists.txt  comprehensive_test.cpp  main_test.cpp  test_database.cpp  test_database.h  test_file_analyzer.cpp  test_file_analyzer.h  test_network_detector.cpp  test_network_detector.h  test_process_detector.cpp  test_process_detector.h  test_security.cpp  test_security.h  test_threat_dictionary.cpp  test_threat_dictionary.h
tools/: CMakeLists.txt  db_init.cpp
translations/: emergency_en.ts  emergency_zh_CN.ts
ui/: MainWindow.ui
